src/test/deca/demo/error/missing_semi.deca
// Programme dans lequel il manque une point-virgule
{
    // Il manque un point-virgule ci-dessous
    int i = 5
}
